fixed accessibility spacing issue

--- a/styles/base.css
+++ b/styles/base.css
@@ -161,6 +161,10 @@ figcaption {
     padding: 1rem;
 }
 
+.resources ul li {
+    padding: .5rem 0;
+}
+
 .resources a, .location a {
     color: #000;
 }
